0.36

0.35 2025-01-01T15:09:35+01:00
 - Update Wikibase content language codes.
 - Update copyright years.
 - Update mediawiki language codes.

0.34 2024-11-10T17:03:15+01:00
 - Add tests.
 - Update copyright years.

0.33 2023-11-02T10:58:56+01:00
 - Add fixtures with tests and examples.
 - Regen examples.
 - Update Wikibase::Datatype doc.

0.32 2023-10-27T20:25:33+02:00
 - Add Wikibase::Datatype::Value::Lexeme.
 - Add fixtures for statement of given name with Michal value.
 - Add missing Sense to Value doc.
 - Improve doc comments.
 - Improve Wikibase::Datatype::Utils SEE ALSO section in doc.
 - Update Module::Install to 1.21.

0.31 2023-04-27T15:00:16+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::DouglasAdams.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Lexeme::Wikidata::DogCzechNoun.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Property::Wikidata::InstanceOf.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Sense::Wikidata::Dog.
 - Add SEE ALSO link to Wikibase::Datatype::Snak.
 - Fix output of example in Wikibase::Datatype::Languages doc.
 - Fix typos in doc.

0.30 2023-04-26T10:57:20+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::MediainfoStatement::Commons::Depicts::Human.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::Retrieved::Fixture1.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::GivenName::Douglas.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::GrammaticalGender::Masculine.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::Image::Dog.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::InstanceOf::CommonLivingOrganism.
 - Add doc for