@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 use Wikibase::Datatype::Value::Quantity;
 
@@ -18,4 +18,12 @@ $obj = Wikibase::Datatype::Value::Quantity->new(
 	'value' => '10',
 );
 $ret = $obj->upper_bound;
-is($ret, 11, 'Get explicit upper_bound().');
+is($ret, 11, 'Get explicit upper_bound() (11).');
+
+# Test.
+$obj = Wikibase::Datatype::Value::Quantity->new(
+	'upper_bound' => 10,
+	'value' => '10',
+);
+$ret = $obj->upper_bound;
+is($ret, 10, 'Get explicit upper_bound() (10).');
